# hand-to-tex

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml  main.py  pyproject.toml
.github/workflows/: deploy.yaml  flake8-push-linting.yml  python-push-testing.yml  ruff-push-linting.yml
configs/: default.yaml  sample.yaml  short.yaml
examples/: example_workflow.ipynb
examples/lightning_logs/version_0/: metrics.csv
examples/lightning_logs/version_1/: metrics.csv
scripts/: benchmark_inference.py  benchmark_kvcache.py  demo.py  download_data.py  export.py  init.py  preprocess.py
src/: test_linting.py
src/hand_to_tex/: onnx_export.py  types.py
src/hand_to_tex/cli/: run.py
src/hand_to_tex/datasets/: __init__.py  collate.py  dataloader.py  datamodule.py  dataset.py  ink_data.py
src/hand_to_tex/models/: __init__.py  baseline_model.py  lit_module.py  lit_module_kvcache.py
src/hand_to_tex/models/components/: __init__.py  base.py  baseline_model.py  exp_kvcache_demo.py  experimental.py  experimental_kvcache.py  exportable.py  positional_encoding.py
src/hand_to_tex/scripts/: download_data.py  preprocess.py
src/hand_to_tex/training/: __init__.py  baseline_trainer.py  lightning_trainer.py
src/hand_to_tex/utils/: __init__.py  export_helpers.py  inference.py  interactive.py  latex_vocab.py  logging.py
tests/: conftest.py  test_basic.py
tests/datasets/: test_collate.py  test_dataloader.py  test_datamodule.py  test_dataset.py  test_dataset_preprocessed.py  test_ink_data.py
tests/fixtures/: minimal_symbols.inkml  sample.inkml
tests/integration/: test_data_loading.py  test_training_smoke.py
tests/models/: test_baseline_model.py  test_experimental.py  test_experimental_kvcache.py  test_lit_module.py
tests/scripts/: test_download_data.py  test_init.py
tests/utils/: test_latex_vocab.py  test_logging.py
web/: README.md  app.js  canvas-drawing.js  index.html  package-lock.json  package.json  vite.config.ts
web/public/assets/: vocab.json
web/src/: App.css  App.tsx  index.css
web/src/components/: CTAButton.tsx  DrawingCanvas.tsx  EditModal.tsx  Home.tsx  ModeHint.tsx  SelectionWindow.tsx  Toast.tsx
web/src/hooks/: useModel.ts
web/src/logic/: canvas.ts  inference.ts
