[project]
name = "hand-to-tex"
version = "0.1.0"
description = "Model to convert handwritten math text into latex format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle (error)
    "F",  # pyflakes
    "B",  # bugbear
    "C4", # flake8-comprehensions
    "I",  # isort
    "UP", # pyupgrade
]

ignore = ["E501"]

[project.scripts]
htt-get-data = "hand_to_tex.scripts.download_data:main"
htt-preprocess = "hand_to_tex.scripts.preprocess:main"