[project]
name = "hand-to-tex"
version = "0.1.0"
description = "Model to convert handwritten math text into latex format"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.6.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "torch>=2.1.0",
    "torchmetrics>=1.9.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.1",
    "jsonargparse[signatures]>=4.27.7",
    "rich>=10.2.2",
    "typing-extensions>=4.15.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.setuptools]
package-dir = { "" = "src", "scripts" = "scripts" }

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["hand_to_tex*", "scripts*"]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle (error)
    "F",  # pyflakes
    "B",  # bugbear
    "C4", # flake8-comprehensions
    "I",  # isort
    "UP", # pyupgrade
]

ignore = ["E501"]

[project.scripts]
htt-get-data = "scripts.download_data:main"
htt-preprocess = "scripts.preprocess:main"
htt-demo = "scripts.demo:main"
htt-init = "scripts.init:main"
htt-run = "hand_to_tex.cli.run:main"

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
